--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -9,24 +9,29 @@
 {
     <MudTable Items="@Model.RaceDrivers.OrderBy(e => (int)e.Status).ThenBy(e => e.Position)" Dense="true" Style="width: 1600px">
         <ToolBarContent>
-            <MudText>
-                <CountryFlag Code="@Model.Country" />
-                @Model.Name - ROUND @Model.Round
-            </MudText>
-            <MudText>weather: @Model.Weather</MudText>
-            <MudText>Laps: @(racedLaps) / @(totalLaps)</MudText>
-            <MudSpacer />
-            @if (calculated >= calculationCount)
-            {
-                <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
-            }
-            else
-            {
-                @* The following seems a bit too clumsy  to implement, so it isn't implemented
-                    <MudNumericField T="int" @bind-Value="calculationsPerAdvance" Label="Laps to advance x10" Class="field-md" />
-                *@
-                <MudButton Color="Color.Tertiary" Variant="Variant.Outlined" OnClick="Advance">Advance</MudButton>
-            }
+            <MudStack Row="true" Justify="Justify.SpaceBetween">
+                <MudText>
+                    <MudIcon Icon="@(Model.Weather.GetWeatherIcon())" />
+                    <CountryFlag Code="@Model.Country" />
+                    @Model.Name - ROUND @Model.Round
+                </MudText>
+            </MudStack>
+            
+            <MudChip Color="Color.Dark" Label="true">@(racedLaps) / @(totalLaps)</MudChip>
+
+            <div>
+                @if (calculated >= calculationCount)
+                {
+                    <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
+                }
+                else
+                {
+                    @* The following seems a bit too clumsy  to implement, so it isn't implemented
+                        <MudNumericField T="int" @bind-Value="calculationsPerAdvance" Label="Laps to advance x10" Class="field-md" />
+                    *@
+                    <MudButton Color="Color.Tertiary" Variant="Variant.Outlined" OnClick="Advance">Advance</MudButton>
+                }
+            </div>
         </ToolBarContent>
         <ColGroup>
             <col style="width: 15px" />
@@ -64,6 +69,10 @@
             <MudTd>
                 <CountryFlag Code="@context.Nationality" Size="FlagSize.Tiny" />
                 @context.FullName
+                @if (context.HasFastestLap)
+                {
+                    <MudIcon Icon="@Icons.Material.Filled.Timer" Size="Size.Small" Style="color:mediumpurple" />
+                }
             </MudTd>
             <MudTd>@context.Number</MudTd>
             <MudTd Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
@@ -125,8 +134,8 @@
     int highestScore;
     int racedLaps;
     int totalLaps;
-    int minLapRng = 0;
-    int maxLapRng = 50;
+    int minLapRng;
+    int maxLapRng;
 
     int calculated;
     int calculationCount;
@@ -136,6 +145,8 @@
     {
         Model = await RaceService.RetrieveRaceModel(RaceId);
         allotments = Model.Season.PointAllotments?.ToDictionary(e => e.Position, e => e.Points) ?? new();
+        minLapRng = Model.Season.RngMinimum;
+        maxLapRng = Model.Season.RngMaximum;
 
         // Chance is calculated by dividing the set value with 100, making it a "reference"
         disqualifyChance = 100 / Model.DisqualifyChance;
@@ -203,6 +214,7 @@
 
                     // Finally add the score to the lap results
                     lapScore.Score = lapValue;
+
                     driver.LapResults.Add(lapScore);
                     lapScoresToPersist.Add(lapScore);
                 }
@@ -345,7 +357,7 @@
             .Select(e => e.ToScoredPoints(allotments, Model.Season.PointsPole, Model.Season.PointsFastestLap))
             .ToList();
 
-        // Should be removed if it is done per advance
+        // Should be removed when it is done per advance
         var allLapScores = Model.RaceDrivers.SelectMany(e => e.LapResults).Where(e => e.Id == 0).ToList();
         await PersistLapScores(allLapScores);
 
