Cleaned up a lot of the visuals and underlying logic, main season progress seems to be working properly

--- a/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
@@ -9,7 +9,7 @@
         <ToolBarContent>
             <MudText Typo="Typo.h4">Tyre manufacturers</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddManufacturer">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddManufacturer">New</MudButton>
         </ToolBarContent>
         <HeaderContent>
             <MudTh>Name</MudTh>
