--- a/SimTECH/SimTECH/Pages/Factors/Strategies.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Strategies.razor
@@ -11,7 +11,7 @@
                 <ToolBarContent>
                     <MudText Typo="Typo.h4">Strategies</MudText>
                     <MudSpacer />
-                    <MudButton Variant="Variant.Outlined" Color="Color.Success" OnClick="AddStrategy">New</MudButton>
+                    <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddStrategy">New</MudButton>
                 </ToolBarContent>
                 <Columns>
                     <TemplateColumn Title="Tyres" Sortable="false">
@@ -59,7 +59,7 @@
                 <ToolBarContent>
                     <MudText Typo="Typo.h4">Tyres</MudText>
                     <MudSpacer />
-                    <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddTyre">New</MudButton>
+                    <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddTyre">New</MudButton>
                 </ToolBarContent>
                 <Columns>
                     <PropertyColumn Property="e => e.Name" CellStyleFunc="_applyTyreColouring" />
