--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -10,12 +10,12 @@
         <ToolBarContent>
             <MudText Typo="Typo.h4">Leagues</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddLeague">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddLeague">New</MudButton>
         </ToolBarContent>
         <Columns>
             <HierarchyColumn T="League" />
             <PropertyColumn Property="e => e.Name" />
-            <PropertyColumn Property="e => e.RaceLength" />
+            <PropertyColumn Property="e => e.RaceLength" Title="Length (in km)" />
             <PropertyColumn Property="e => e.State" />
             <TemplateColumn Sortable="false" CellClass="d-flex justify-end">
                 <CellTemplate>
