--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -10,7 +10,7 @@
         <ToolBarContent>
             <MudText Typo="Typo.h4">Teams</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Success" OnClick="AddTeam">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddTeam">New</MudButton>
         </ToolBarContent>
         <Columns>
             <HierarchyColumn T="Team" />
