--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -9,7 +9,7 @@
         <ToolBarContent>
             <MudText Typo="Typo.h4">Traits</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddTrait">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddTrait">New</MudButton>
         </ToolBarContent>
         <Columns>
             <HierarchyColumn T="Trait" />
