--- a/SimTECH/SimTECH/Pages/Season/Seasons.razor
+++ b/SimTECH/SimTECH/Pages/Season/Seasons.razor
@@ -13,11 +13,11 @@
             <ToolBarContent>
                 <MudText Typo="Typo.h4">Seasons</MudText>
                 <MudSpacer />
-                <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="NewSeason">New</MudButton>
+                <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="NewSeason">New</MudButton>
             </ToolBarContent>
             <Columns>
                 <PropertyColumn Property="e => e.Year" />
-                <PropertyColumn Property="e => e.State" />
+                <PropertyColumn Property="e => e.DriverNumber" Title="No." />
                 <TemplateColumn Title="Leading driver">
                     <CellTemplate>
                         <CountryFlag Code="context.Item.DriverNationality" Size="FlagSize.Small" />
@@ -31,6 +31,7 @@
                     </CellTemplate>
                 </TemplateColumn>
                 <PropertyColumn Property="e => e.League" />
+                <PropertyColumn Property="e => e.State" />
                 <TemplateColumn CellClass="d-flex justify end">
                     <CellTemplate>
                         <MudButtonGroup Size="@Size.Small">
@@ -100,5 +101,5 @@
     }
 
     private static Func<SeasonListModel, string> LeadingTeamStyleFunc => model 
-        => ViewHelper.SetFullColourstyle(model.TeamColour, model.TeamAccent);
+        => ViewHelper.SetBorderLeftStyle(model.TeamColour);
 }
