--- a/SimTECH/SimTECH/Pages/Statistics/Stats.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/Stats.razor
@@ -5,6 +5,11 @@
 <PageTitle>Statistics</PageTitle>
 
 <MudGrid>
+    <MudItem xs=12>
+        <MudPaper Elevation="15" Height="100px" Class="d-flex flex-row justify-center pa-4">
+            <MudText Typo="Typo.h4">Statistics</MudText>
+        </MudPaper>
+    </MudItem>
     <MudItem xs="4">
         <MudCard>
             <MudCardHeader>
